* Update sample data.

--- a/examples/screen.yaml
+++ b/examples/screen.yaml
@@ -2,7 +2,11 @@
 - ほげほげ一覧画面:
   - ほげほげ詳細画面:
     - ほげほげ設定画面
-    - ほげほげ編集画面
-  - ほげほげ削除確認画面
+    - ほげほげ編集画面:
+      - ほげほげ編集確認画面:
+        - ほげほげ一覧画面
+  - ほげほげ削除確認画面:
+    - ほげほげ一覧画面
 - ふがふが一覧画面:
-  - ふがふが設定画面
+  - ふがふが設定画面:
+    - ふがふが一覧画面
