* Add unittest-xml-reporting to run test under jenkins

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,5 +10,7 @@ interpreter = py
 
 [test]
 recipe = pbp.recipe.noserunner
-eggs = blockdiag[test]
+eggs =
+    blockdiag[test]
+    unittest-xml-reporting
 
