* Add coverage to run test under jenkins

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = blockdiag test
+parts = blockdiag test coverage
 
 develop = .
 
@@ -12,5 +12,9 @@ interpreter = py
 recipe = pbp.recipe.noserunner
 eggs =
     blockdiag[test]
+    coverage
     unittest-xml-reporting
 
+[coverage]
+recipe = zc.recipe.egg
+eggs = coverage
