--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include buildout.cfg
 include bootstrap.py
 include MANIFEST.in
-recursive-include examples *.diag
-recursive-include src *.py *.txt
+recursive-include examples *.diag *.png *.svg
+recursive-include src *.py *.txt *.diag
 
