Add dependency to docutils

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,12 +5,13 @@ develop = .
 
 [blockdiag]
 recipe = zc.recipe.egg
-eggs = blockdiag
+eggs = blockdiag[rst]
 interpreter = py
 
 [test]
 recipe = pbp.recipe.noserunner
 eggs =
+    blockdiag[rst]
     blockdiag[test]
     coverage
     unittest-xml-reporting
