Add pyflakes target to buildout.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = blockdiag test coverage
+parts = blockdiag test coverage pyflakes
 
 develop = .
 
@@ -19,6 +19,12 @@ eggs =
 [coverage]
 recipe = zc.recipe.egg
 eggs = coverage
+
+[pyflakes]
+recipe = zc.recipe.egg
+eggs = pyflakes
+scripts = pyflakes
+entry-points = pyflakes=pyflakes.scripts.pyflakes:main
 
 [test-extra]
 recipe = iw.recipe.cmd:py
