Use pylint as metrics utility

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = blockdiag test coverage pyflakes
+parts = blockdiag test coverage pyflakes pylint
 
 develop = .
 
@@ -25,6 +25,13 @@ recipe = zc.recipe.egg
 eggs = pyflakes
 scripts = pyflakes
 entry-points = pyflakes=pyflakes.scripts.pyflakes:main
+
+[pylint]
+recipe = zc.recipe.egg
+eggs =
+    pylint
+    blockdiag[test]
+scripts = pylint
 
 [test-extra]
 recipe = iw.recipe.cmd:py
