Use tox for testing

--- a/.hgignore
+++ b/.hgignore
@@ -1,12 +1,14 @@
-.installed.cfg
-.coverage
 .pyc
 .swp
-bin
-_build
-develop-eggs
-dist
-eggs
-parts
-src/.*.egg-info
-src/blockdiag/tests/truetype
+^.installed.cfg
+^.coverage
+^.tox
+^bin/
+^build/
+^_build/
+^develop-eggs/
+^dist/
+^eggs/
+^parts/
+^src/.*.egg-info
+^src/blockdiag/tests/truetype
