--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = blockdiag test coverage pyflakes pylint
+parts = blockdiag test coverage tox pyflakes pylint
 
 develop = .
 
@@ -19,6 +19,10 @@ eggs =
 [coverage]
 recipe = zc.recipe.egg
 eggs = coverage
+
+[tox]
+recipe = zc.recipe.egg
+eggs = tox
 
 [pyflakes]
 recipe = zc.recipe.egg
