Use flake8 to analysis codes

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = blockdiag test coverage tox pyflakes pylint
+parts = blockdiag test tox static_analysis
 
 develop = .
 
@@ -16,28 +16,22 @@ eggs =
     coverage
     unittest-xml-reporting
 
-[coverage]
-recipe = zc.recipe.egg
-eggs = coverage
-
 [tox]
 recipe = zc.recipe.egg
 eggs =
     tox
     detox
 
-[pyflakes]
-recipe = zc.recipe.egg
-eggs = pyflakes
-scripts = pyflakes
-entry-points = pyflakes=pyflakes.scripts.pyflakes:main
-
-[pylint]
+[static_analysis]
 recipe = zc.recipe.egg
 eggs =
+    coverage
+    flake8
     pylint
-    blockdiag[test]
-scripts = pylint
+scripts =
+    coverage
+    flake8
+    pylint
 
 [test-extra]
 recipe = iw.recipe.cmd:py
