--- a/tox.ini
+++ b/tox.ini
@@ -5,14 +5,16 @@ envlist=py26,py27,py32,py33
 deps=
     nose
     pep8
+    flake8
     docutils
 commands=
     nosetests
-
+    flake8 src
 
 [testenv:py26]
 deps=
     nose
     pep8
+    flake8
     docutils
     unittest2
