--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,8 @@
 include buildout.cfg
 include bootstrap.py
 include MANIFEST.in
+include README.rst
 include LICENSE
 include blockdiag.1
 recursive-include examples *.diag *.png *.svg
-recursive-include src *.py *.txt *.diag
+recursive-include src *.py *.diag
