--- a/tox.ini
+++ b/tox.ini
@@ -3,18 +3,8 @@ envlist=py26,py27,py32,py33
 
 [testenv]
 deps=
-    nose
-    pep8
     flake8
-    docutils
 commands=
+    pip install -e .[testing]
     nosetests
     flake8 src
-
-[testenv:py26]
-deps=
-    nose
-    pep8
-    flake8
-    docutils
-    unittest2
